fix: adjust dark mode styles for h2 and h4 headings for better consistency

--- a/public/style/printing-doc.css
+++ b/public/style/printing-doc.css
@@ -23,8 +23,7 @@
         color: #FFFFFF;
     }
     :root.dark .doc-page h1,
-    :root.dark .doc-page h2,
-    :root.dark .doc-page h4 {
+    :root.dark .doc-page h2 {
         color: #DD6464;
     }
 }
@@ -66,7 +65,7 @@ body > main {
 }
 
 .doc-page h2 {
-    padding: 4mm 0 1mm 0;
+    padding: 3mm 0 1mm 0;
     border-bottom: 1pt solid #AAAAAA;
     color: #992222;
     font-size: 12pt;
@@ -80,7 +79,6 @@ body > main {
 }
 
 .doc-page h4 {
-    color: #992222;
     font-weight: bold;
 }
 
